# waypaper-my-version-

./: LICENSE  README.md  build-windows.sh  git-push.sh  installer.sh  opencode.jsonc  pyproject.toml  waypaper-windows.spec
.github/workflows/: build-windows.yml  release.yml
config/: config.ini.example  style.css
electron-app/: .gitignore  electron-builder.yml  package-lock.json  package.json  tsconfig.node.json  tsconfig.web.json
electron-app/src/main/: brain.ts  index.ts  ipc.ts  paths.ts  wallhaven.ts  wallpaper.ts
electron-app/src/preload/: index.ts
electron-app/src/renderer/: index.html
electron-app/src/renderer/src/: App.tsx  api.ts  types.ts
electron-app/src/renderer/src/components/: Grid.tsx  Pagination.tsx  PreviewModal.tsx  StatusBar.tsx  Toolbar.tsx
electron-app/src/renderer/src/styles/: app.css
scripts/: wallhaven-download  wallpaper-brain  waypaper-gnome  waypaper-refresh
src/waypaper/: __main__.py  app.py  brain.py  changer_windows.py  keybindings.py  options.py  wallhaven.py  web.py
src/waypaper/static/: app.js  index.html  style.css
systemd/: wallpaper-brain.service  wallpaper-brain.timer
