[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "waypaper"
version = "2.8-my-version"
description = "GUI wallpaper setter for Wayland — anthra123x fork with Wallhaven integration + Keep/Discard brain"
readme = "README.md"
license = { text = "GPL" }
authors = [
    { name = "Roman Anufriev", email = "anufriev.roman@protonmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "PyGObject",
    "Pillow",
]
scripts = { waypaper = "waypaper.__main__:run" }

[tool.setuptools.packages.find]
where = ["src"]
