[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "waypaper"
version = "2.8.0.dev1"
description = "GUI wallpaper setter for Wayland with Wallhaven integration + Keep/Discard brain. Cross-platform (Linux GTK, Windows Web UI)."
readme = "README.md"
license = { text = "GPL" }
authors = [
    { name = "Roman Anufriev", email = "anufriev.roman@protonmail.com" },
]
requires-python = ">=3.11"
dependencies = [
    "PyGObject",
    "Pillow",
]
scripts = { waypaper = "waypaper.__main__:run" }

[project.optional-dependencies]
windows = ["flask"]

[tool.setuptools.packages.find]
where = ["src"]
